# django-nuxt-bun-docker-starter

./: .env.template  .gitignore  README.md  docker-compose-dev.yml  docker-compose-prod.yml
server/: Dockerfile  Dockerfile_prod  pyproject.toml
server/project/: settings.py
server/project/settings/: __init__.py
server/project/settings/components/: common.py  database.py
server/scripts/: start_dev.sh  start_prod.sh
web/: Dockerfile  Dockerfile_prod  bun.lockb
